--- a/style.css
+++ b/style.css
@@ -264,6 +264,7 @@ nav ul li a:hover::after {
   color: var(--text-color);
   display: flex;
   margin: 1rem 0 2rem;
+  letter-spacing: 0.2rem;
   justify-content: center;
   border-radius: 25px;
 }
@@ -271,7 +272,7 @@ nav ul li a:hover::after {
 .tab-links {
   margin-right: 3rem;
   font-size: 1.8rem;
-  font-weight: 500;
+  font-weight: 600;
   cursor: pointer;
   position: relative;
 }
@@ -300,8 +301,8 @@ nav ul li a:hover::after {
 }
 
 .tab-contents ul li span {
-  font-style: italic;
   color: var(--main-color);
+  font-weight: 600;
   font-size: 1.5rem;
 }
 
@@ -322,6 +323,22 @@ nav ul li a:hover::after {
   display: flex;
 }
 
+#experience ul li .job-title {
+  font-weight: 800;
+  font-size: 1.1rem;
+  position: relative;
+}
+
+#experience ul li p.job-title::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 0.2rem;
+  background: var(--text-color);
+  left: 0;
+  bottom: -0.2rem;
+  transition: 0.5s;
+}
 /***************************** Blog ********************************/
 
 .blog-box:hover {
