--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ html {
 
 body {
   color: var(--text-color);
-  background-image: url("../images/polyu.jpeg") 0.5 0.5;
   height: 100vh;
   background-size: cover;
   background-attachment: fixed;
@@ -38,7 +37,7 @@ body::before {
   right: 0;
   bottom: 0;
   background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
-    url("../images/polyu.jpeg");
+    url("./images/polyu.jpeg");
   background-position: center center;
   background-size: cover;
   z-index: -1;
