--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@
   font-family: "Roboto", sans-serif;
   text-decoration: none;
   box-sizing: border-box;
+  font-style: normal;
+}
+
+svg,
+rect {
+  height: 50px;
+  width: 200px;
 }
 
 :root {
@@ -11,7 +18,6 @@
   --second-color: #382c1ba4;
   --text-color: #ffffff;
   --main-color: #ff4500;
-  --accent: cyan;
 }
 
 html {
@@ -20,6 +26,7 @@ html {
 }
 
 body {
+  font-family: inherit;
   color: var(--text-color);
   height: 100vh;
   background-size: cover;
@@ -60,7 +67,7 @@ nav {
 }
 
 .shape {
-  fill: var(--second-color);
+  fill: #1f1912a4;
   stroke: var(--main-color);
   stroke-dasharray: 64 400;
   stroke-dashoffset: 145;
@@ -70,20 +77,22 @@ nav {
 }
 
 .shape:hover {
+  fill: transparent;
   stroke-width: 2px;
   stroke-dashoffset: 0;
   stroke-dasharray: 760;
 }
 
 .text {
-  font-size: 1.5rem;
+  width: 200px;
+  text-align: center;
+  font-size: 15px;
   text-shadow: 0 0 3px var(--text-color);
   font-family: "Roboto", sans-serif;
-  line-height: 1rem;
-  text-align: center;
-  letter-spacing: 0.3rem;
+  line-height: 10px;
+  letter-spacing: 3px;
   color: var(--text-color);
-  top: -3rem;
+  top: -30px;
   position: relative;
   pointer-events: none;
 }
@@ -213,6 +222,12 @@ nav ul li a:hover::after {
   letter-spacing: 0.5rem;
   text-shadow: 0 0 5px var(--main-color);
 }
+
+#home-btn {
+  position: absolute;
+  bottom: 10%;
+  width: 100%;
+}
 /***************************** About ********************************/
 
 .row {
@@ -223,11 +238,6 @@ nav ul li a:hover::after {
 
 #about h1 {
   margin-top: 3%;
-}
-
-#about #all-btn {
-  width: 100%;
-  text-align: center;
 }
 
 .about-col-1 img {
@@ -290,9 +300,6 @@ nav ul li a:hover::after {
 .tab-links.active-link::after {
   width: 50%;
 }
-.tab-contents ul {
-  margin: 0 auto;
-}
 
 .tab-contents ul li {
   list-style: none;
@@ -322,13 +329,17 @@ nav ul li a:hover::after {
   display: flex;
 }
 
-#experience ul li .job-title {
+#experience ul li .job-title,
+#lastest-project ul li .used-tech,
+#education ul li p.school-name {
   font-weight: 800;
   font-size: 1.1rem;
   position: relative;
 }
 
-#experience ul li p.job-title::after {
+#experience ul li p.job-title::after,
+#education ul li p.school-name::after,
+#lastest-project ul li p.used-tech::after {
   position: absolute;
   content: "";
   width: 100%;
@@ -345,6 +356,7 @@ nav ul li a:hover::after {
 }
 
 .blog-container {
+  padding: 0 6%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -352,11 +364,11 @@ nav ul li a:hover::after {
 }
 
 .blog-box {
-  width: 420px;
-  background-color: #fff;
-  margin: 3rem;
+  width: 42rem;
+  margin: 5rem;
   transition: 0.9s;
-  box-shadow: var(--main-color) 0px 10px 10px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  box-shadow: var(--main-color) 0px 3px 3px,
+    rgba(241, 22, 22, 0.973) 0px 10px 10px;
 }
 
 .blog-img {
@@ -372,6 +384,9 @@ nav ul li a:hover::after {
 }
 
 .blog-text {
+  background: var(--background-color);
+  color: var(--text-color);
+  backdrop-filter: blur(50px);
   padding: 30px;
   display: flex;
   flex-direction: column;
@@ -379,20 +394,14 @@ nav ul li a:hover::after {
 
 .blog-text span {
   color: var(--main-color);
-  font-size: 0.9rem;
-}
-.blog-text .blog-title {
-  font-size: 1.3rem;
-  font-weight: 500;
-  color: #272727;
-}
-.blog-text .blog-title:hover {
-  color: var(--main-color);
-  transition: all ease 0.5s;
+  font-size: 1.5rem;
 }
 
 .blog-text p {
-  color: #272727;
+  padding: 0 5%;
+  text-align: justify;
+  letter-spacing: 0.15rem;
+  line-height: 1.5rem;
   font-size: 1rem;
   display: -webkit-box;
   -webkit-line-clamp: 3;
@@ -402,22 +411,24 @@ nav ul li a:hover::after {
   margin: 20px 0px;
 }
 
-.blog-text .read-more {
-  color: #0f0f0f;
-  font-size: 1rem;
+.blog-text .read-more,
+span.read-little {
+  font-size: 1.2rem;
+  letter-spacing: 0.3rem;
   transition: all ease 0.5s;
   cursor: pointer;
 }
-.blog-text .read-more:hover {
-  color: var(--main-color);
-  font-size: 1rem;
+.blog-text .read-more:hover,
+span.read-little:hover {
+  color: rgb(255, 103, 2);
+  font-size: 1.3rem;
 }
 
 span.read-little {
+  color: var(--text-color);
   display: none;
-  font-weight: bold;
-  font-size: 1.2rem;
   cursor: pointer;
+  font-weight: 600;
 }
 
 .blog-text p.expanded {
@@ -576,6 +587,11 @@ span.read-little {
   margin-top: 1.2rem;
   margin-bottom: -1rem;
 }
+.contact-left,
+.contact-right {
+  height: 80vh;
+  position: relative;
+}
 
 .contact-left {
   background: transparent;
@@ -602,11 +618,11 @@ span.read-little {
   font-size: 2.5rem;
 }
 
-.btn.btn2 {
-  display: inline-block;
-  background: var(--main-color);
-  font-size: 2rem;
-  text-transform: uppercase;
+#contact-btn {
+  position: absolute;
+  background-color: transparent;
+  bottom: -80px;
+  border: none;
 }
 
 .contact-right form {
@@ -616,10 +632,10 @@ span.read-little {
 }
 
 .contact-right #sub-btn {
+  margin-top: 5%;
   padding: 0;
   background-color: transparent;
   border: none;
-  margin: 0;
   width: 100%;
 }
 
@@ -774,10 +790,7 @@ input[type="date"] {
   border: 1px solid var(--main-color);
 }
 #contact input[type="date"] {
-  width: 20rem;
-  background-color: #ff5e0069;
-  padding: 15px;
-  color: #fff;
+  color: grey;
   border: none;
   outline: none;
   border-radius: 5px;
@@ -867,15 +880,9 @@ nav .fas {
     cursor: pointer;
   }
 
-  #header .container {
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-  }
-
   .header-text-container {
     height: 400px;
+    position: relative;
   }
   .header-text h1 {
     font-size: 3rem;
@@ -912,6 +919,21 @@ nav .fas {
     margin: 0 auto;
     font-size: 1.85rem;
     width: 200px;
+  }
+
+  svg,
+  rect {
+    height: 25px;
+    width: 100px;
+  }
+
+  .text {
+    width: 100px;
+    top: -20px;
+    font-size: 0.1rem;
+  }
+  #home-btn {
+    width: 100px;
   }
   .button {
     width: 100%;
@@ -966,50 +988,29 @@ nav .fas {
   }
 
   .about-col-2 {
-    width: 70%;
-    padding: 0;
+    width: 100%;
   }
 
   .about-col-2 .about-text p {
     color: var(--text-color);
   }
-  .about-col-2 {
-    font-size: 1.4rem;
-    text-align: center;
-  }
-
-  .about-col-2 .tab {
-    width: 100%;
-    padding: 0;
-  }
 
   .tab-contents.active-tab {
-    padding: 0;
     width: 100%;
   }
   .tab-contents {
-    padding: 0;
     width: 100%;
   }
 
-  .tab-contents ul {
-    padding: 0;
-  }
-  .tab-contents ul li p {
-    padding: 0;
-  }
-
-  .tab-contents ul li {
-    padding: 0;
-  }
-
-  #about .container .row {
-    padding: 0;
+  .contact-left,
+  .contact-right {
+    height: auto;
   }
 
   .contact-left,
   .contact-right {
     width: 100%;
+    position: relative;
   }
 
   #cal {
