--- a/style.css
+++ b/style.css
@@ -553,22 +553,6 @@ span.read-little {
   box-shadow: 0 0 20px var(--main-color);
 }
 
-.btn {
-  display: block;
-  margin: 2rem auto;
-  width: fit-content;
-  border: 1px solid var(--main-color);
-  padding: 1.4rem 5rem;
-  border-radius: 2.5rem;
-  text-decoration: none;
-  color: #fff;
-  transition: background 0.5s;
-}
-
-.btn:hover {
-  background: var(--main-color);
-}
-
 /*------------------------contact-------------------------------*/
 
 #contact {
@@ -930,7 +914,7 @@ nav .fas {
   .text {
     width: 100px;
     top: -20px;
-    font-size: 0.1rem;
+    font-size: 1rem;
   }
   #home-btn {
     width: 100px;
@@ -973,18 +957,23 @@ nav .fas {
 
   .tab-titles {
     width: 420px;
-    padding: 5% 0;
-    margin: 0 auto;
+    margin-bottom: 20px;
   }
 
   .tab-links {
-    font-size: 1.7rem;
-    margin-right: 2rem;
-    padding: 0 25px;
+    background-color: transparent;
+    font-size: 1.2rem;
+    fill: blur(100px);
+    transition: 0.3s ease-in-out all;
+  }
+
+  .tab-links:hover {
+    font-size: 1.5rem;
+    fill: blur(100px);
   }
 
   .tab-links::after {
-    left: 25px;
+    bottom: -3px;
   }
 
   .about-col-2 {
