--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ rect {
 :root {
   --background-color: #1f242d;
   --second-color: #382c1ba4;
-  --text-color: #ffffff;
+  --text-color: #ffffffde;
   --main-color: #ff4500;
 }
 
